[gd_scene load_steps=8 format=3 uid="uid://01g144g63sbe"]

[ext_resource type="Script" uid="uid://cgp36ynhmldvh" path="res://Scripts/monster.gd" id="1_20gda"]
[ext_resource type="Texture2D" uid="uid://rlmgnpcedflb" path="res://icon.svg" id="2_os1v1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aacp1"]
radius = 62.0
height = 310.0

[sub_resource type="Animation" id="Animation_iodho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fetchimage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.155, 0.235)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fetchimage:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.28972465]
}

[sub_resource type="Animation" id="Animation_3k203"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fetchimage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.6, 0.86666673, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.155, 0.235), Vector2(0.25, 0.19), Vector2(0.17, 0.29), Vector2(0.3, 0.47), Vector2(0.155, 0.235)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fetchimage:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333337, 0.86666673, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.28972465, 0.11170107, -0.28972465, -0.28972465]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1qu8"]
_data = {
&"RESET": SubResource("Animation_iodho"),
&"new_animation": SubResource("Animation_3k203")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_20gda"]
radius = 85.0
height = 310.0

[node name="Monster" type="CharacterBody2D"]
floor_stop_on_slope = false
floor_max_angle = 3.1415927
floor_snap_length = 10.0
script = ExtResource("1_20gda")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(-1, 0)
texture = ExtResource("2_os1v1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_aacp1")

[node name="Fetchimage" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(-2, -7)
rotation = -0.28972465
scale = Vector2(0.155, 0.235)
texture = ExtResource("2_os1v1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d1qu8")
}
autoplay = "new_animation"
speed_scale = 0.4

[node name="Label" type="Label" parent="."]
offset_left = -206.0
offset_top = -210.0
offset_right = 240.0
offset_bottom = -119.0
theme_override_font_sizes/font_size = 66
text = "Ruunning Poop"
metadata/_edit_use_anchors_ = true

[node name="checker" type="Timer" parent="."]
one_shot = true

[node name="SwimTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_20gda")

[connection signal="timeout" from="checker" to="." method="_on_check_timeout"]
[connection signal="timeout" from="SwimTime" to="." method="_on_swim_time_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
